@@ -6,6 +6,10 @@
  * Add support for merge drivers.
    (Jelmer Vernooĳ)
 
+ * Add support for Git revision syntax operators ``~`` and ``^`` in
+   ``dulwich.objectspec.parse_object``, e.g. ``HEAD~1``, ``HEAD^2``.
+   (Jelmer Vernooĳ)
+
  * Add support for ``GIT_CONFIG_GLOBAL`` and ``GIT_CONFIG_SYSTEM``
    environment variables to override global and system configuration
    paths. (Jelmer Vernooĳ, #1193)
